# interplay-3d

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  build-windows-vc.bat  build-windows.bat  config.interplay  generate-windows.bat  run-mac-linux.sh
misc/: build.bat  generate.bat  run.bat
src/: compat.c  compat.h  globals.h  log.c  log.h  main.c  ui.c  ui.h  utils.c  utils.h
src/core/: array.c  array.h  context.c  context.h  linked-list.c  linked-list.h  manager.c  manager.h  mem.c  mem.h  text.c  text.h  texture.c  texture.h
src/entities/: entity.h  mesh.c  mesh.h
src/graphics/: camera.c  camera.h  clipping.c  clipping.h  light.c  light.h  renderer.c  renderer.h  screen.c  screen.h  triangle.c  triangle.h
src/math/: mat4.c  mat4.h  vec.c  vec.h
